Regression: Unwrap fails with a single selected face #99794

Closed
opened 2022-07-17 14:56:36 +02:00 by Piotr Adamowicz · 5 comments

System Information
Operating system: Linux-5.18.10-1-MANJARO-x86_64-with-glibc2.35 64 Bits
Graphics card: NVIDIA GeForce RTX 3080 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 515.57

Blender Version
Broken: version: 3.3.0 Alpha, branch: master, commit date: 2022-07-17 00:27, hash: cd1e4ae448
Worked: versions prior to #78394 I believe, not quite sure

Short description of error

When seams are not present and a number of faces are selected, unwrap fails for trivial cases when activated from the 3D view, with the message "Unwrap failed to solve 1 of 1 island(s), edge seams may need to be added".

Exact steps for others to reproduce the error

  1. Open attached file
  2. Press U -> Unwrap while hovering mouse over 3D view.

unwrap.blend

Or simply:

  1. Select a single face from the default cube.
  2. Press U -> Unwrap while hovering mouse over 3D view.
  3. Error.
**System Information** Operating system: Linux-5.18.10-1-MANJARO-x86_64-with-glibc2.35 64 Bits Graphics card: NVIDIA GeForce RTX 3080 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 515.57 **Blender Version** Broken: version: 3.3.0 Alpha, branch: master, commit date: 2022-07-17 00:27, hash: `cd1e4ae448` Worked: versions prior to #78394 I believe, not quite sure **Short description of error** When seams are not present and a number of faces are selected, unwrap fails for trivial cases when activated from the 3D view, with the message "Unwrap failed to solve 1 of 1 island(s), edge seams may need to be added". **Exact steps for others to reproduce the error** 1. Open attached file 2. Press U -> Unwrap while hovering mouse over 3D view. [unwrap.blend](https://archive.blender.org/developer/F13297197/unwrap.blend) Or simply: 1. Select a single face from the default cube. 2. Press U -> Unwrap while hovering mouse over 3D view. 3. Error.

Added subscriber: @MadMinstrel

Added subscriber: @MadMinstrel
Omar Emara changed title from Unwrap fails when activated from the 3D view to Regression: Unwrap fails with a single selected face 2022-07-17 19:11:47 +02:00
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Chris Blackbourn self-assigned this 2022-07-17 23:50:16 +02:00

Confirmed bug and have local fix.

...Locating regression to confirm...

Confirmed bug and have local fix. ...Locating regression to confirm...

This issue was referenced by 37922eab90

This issue was referenced by 37922eab90a9147cb0282cf648e4b6e1e5f05d66

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser Project (Legacy)
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#99794
No description provided.