Fix T99794: regression from uv unwrap selected

Restore only_selected_faces flag inadvertently changed by c0e453233132

Differential Revision: https://developer.blender.org/D15480